[gd_scene load_steps=10 format=2]

[ext_resource path="res://kelelawar.gd" type="Script" id=1]
[ext_resource path="res://Asset/musuh & powerup/kelelawar/0.png" type="Texture" id=2]
[ext_resource path="res://Asset/musuh & powerup/kelelawar/1.png" type="Texture" id=3]
[ext_resource path="res://Asset/musuh & powerup/kelelawar/2.png" type="Texture" id=4]
[ext_resource path="res://Asset/musuh & powerup/kelelawar/3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "jalan",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.4304, 9.48186 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.9513, 3.78274 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.6358, 8.94939 )

[node name="musuh" type="KinematicBody2D"]
position = Vector2( -1.11567, 0 )
collision_layer = 32
collision_mask = 19
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "jalan"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.359201, 0.989632 )
shape = SubResource( 2 )

[node name="cek_ground" type="RayCast2D" parent="."]
position = Vector2( 0, -3.619 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="cek_atas" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="cek_atas"]
position = Vector2( -0.519379, -14.4232 )
shape = SubResource( 3 )

[node name="cek_samping" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="cek_samping"]
position = Vector2( -0.505241, 3.82064 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="cek_atas" to="." method="_on_cek_atas_body_entered"]
[connection signal="body_entered" from="cek_samping" to="." method="_on_cek_samping_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
